# pangolin_desktop

./: .buildconfig  .flutter-plugins-dependencies  .git-ftp-include  .gitignore  .gitlab-ci.yml  .gitmodules  .last_build_id  .metadata  ABOUT.md  BUILD.gn  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  INTRODUCTION.md  LICENSE  Makefile  README.md  analysis_options.yaml  crowdin.yml  dummy.txt  flutter_service_worker.js  index.html  logo.gvdesign  main.dart.js  main_desktop.dart  manifest.json  notes.gvdesign  plan  plan_c  pubspec.yaml  version.json  widget-maker-0a62dfc0-6e5c-11ea-aa4e-b10a573e3c0e.dart
.github/: CONTRIBUTE.md  CONTRIBUTING.md  FUNDING.yml  README.md  TRANSLATION.md  dependabot.yaml  pull_request_template.md
Pangolin/: .metadata  README.md  pubspec.yaml
PangolinX/: Cargo.toml
assets/: AssetManifest.json  FontManifest.json  NOTICES
backend/: pubspec.yaml
dahliaOS/: AppRun  appManifest.json  pangolin_desktop.desktop
integration_test/: app_test.dart
lib/: animated_content_builder.dart  app_model.dart  app_toggle.dart  application.json  apps.dart  calculator.dart  cards.dart  developer.dart  editor.dart  generated_plugin_registrant.dart  json-str.dart  launcher-widget.dart  launcher.dart  launcher_toggle.dart  main.dart  menu.dart  model.dart  quick_settings.dart  searchbar.dart  settings.dart  status_tray.dart  system_overlay.dart  terminal.dart  unused.dart  window.dart  window_playground.dart  window_space.dart  xlib_bindings.dart
linux/: CMakeLists.txt  main.cc  my_application.cc  window_configuration.cc
macos/: Podfile
meta/: pangolin.cmx
test/: custombar_test.dart  mocks.dart  systemui_test.dart  widget_test.dart
web/: index.html  manifest.json
(+654 files in other folders)
