import("//build/config.gni")
import("//build/fidl/fidl.gni")
import("//build/package.gni")
import("//build/testing/flutter_driver.gni")
import("//src/lib/icu/tools/static_icu_data.gni")
import("//topaz/runtime/flutter_runner/flutter_app.gni")

group("pangolin-desktop") {
  public_deps = [
    "session:workstation_session"
  ]
}

flutter_app("pangolin-desktop") {
  main_dart = "lib/main.dart"

  fuchsia_package_name = "pangolin-desktop"
  package_name = "pangolin-desktop"

  flutter_driver_extendable = flutter_driver_enabled

  manifest = "pubspec.yaml"

  sources = [
    "main.dart",
    "app_model.dart",
    "app_toggle.dart",
    "generated_plugin_registrant.dart",
    "json-str.dart",
    "launcher_toggle.dart",
    "model.dart",
    "searchbar.dart",
    "status_tray.dart",
    "apps.dart",
    "launcher.dart",
    "launcher-widget.dart",
    "menu.dart",
    "quick_settings.dart",
    "settings.dart",
    "window_space.dart",
    "components/header_switch_tile.dart",
    "utils/application_manager.dart",
    "utils/palette_generator.dart"
    "window/model.dart",
    "window/window.dart",
    "applications/calculator.dart",
    "applications/cards.dart",
    "applications/developer.dart",
    "applications/editor.dart",
    "applications/terminal.dart",
    "applications/welcome.dart",
    "commons/constants.dart"
    "themes/dynamic_theme.dart",
    "themes/generated_plugin_registrant.dart",
    "themes/main.dart",
    "themes/theme_switcher_widgets.dart",
    "widgets/animated_content_builder.dart",
    "widgets/app_launcher.dart",
    "widgets/system_overlay.dart",
    "widgets/toggle.dart",
  ]
